# rewind

./: .claudeinclude  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: auto-tag.yml  ci.yml  release.yml
action/: action.yml
assets/: build_demo_cast.py  claude-code-hook.sh  demo-agent-builder.webm  demo-v2.cast  demo.cast  record_demo.sh
crates/rewind-assert/: Cargo.toml
crates/rewind-assert/src/: baseline.rs  checker.rs  extract.rs  lib.rs  tolerance.rs
crates/rewind-assert/tests/: checker_tests.rs
crates/rewind-cli/: Cargo.toml
crates/rewind-cli/src/: main.rs  share.rs  update_check.rs
crates/rewind-eval/: Cargo.toml
crates/rewind-eval/src/: comparison.rs  dataset.rs  evaluator.rs  experiment.rs  lib.rs  models.rs  scoring.rs  timeline_scoring.rs
crates/rewind-mcp/: Cargo.toml
crates/rewind-mcp/src/: main.rs  server.rs
crates/rewind-otel/: Cargo.toml
crates/rewind-otel/src/: attributes.rs  export.rs  extract.rs  ingest.rs  lib.rs
crates/rewind-proxy/: Cargo.toml
crates/rewind-proxy/src/: lib.rs  redact.rs
crates/rewind-proxy/tests/: integration_tests.rs  unit_tests.rs
crates/rewind-replay/: Cargo.toml
crates/rewind-replay/src/: lib.rs
crates/rewind-store/: Cargo.toml
crates/rewind-store/src/: blobs.rs  db.rs  envelope.rs  export.rs  hash.rs  lib.rs  models.rs  pricing.rs  redact.rs  runners.rs  sensitive.rs
crates/rewind-tui/src/: lib.rs
crates/rewind-web/: Cargo.toml
crates/rewind-web/src/: api.rs  auth.rs  dispatcher.rs  eval_api.rs  hooks.rs  lib.rs  otlp_ingest.rs  polling.rs  runners.rs  transcript.rs  ws.rs
crates/rewind-web/tests/: api_tests.rs  auth_tests.rs  hooks_tests.rs  recording_api_tests.rs  replay_jobs_tests.rs  runners_tests.rs
demo/: openai_agents_demo.py  run_openai_agents_demo.sh
docs/: PRODUCT-SUMMARY.md  RFC-claude-code-hooks-integration.md  architecture.md  cached-llm-call.md  cli-reference.md  cli-walkthrough.md  evaluation.md  framework-integrations.md  getting-started.md  intercept-quickstart.md  langfuse-import.md  mcp-server.md  multi-agent-tracing.md  openai-agents-sdk.md  otel-export.md  otel-import.md  prompt-evaluation-request.md  proxy-resilience.md  recording-api.md  recording.md  regression-testing.md  replay-and-forking.md  runners.md  security-audit.md  snapshots.md  sql-queries.md  web-ui.md
docs/research/: slack-agent-observability-landscape.md
examples/: 05_direct_mode.py  06_replay_from_failure.py  07_regression_testing.py  08_evaluation.py  09_pydantic_ai.py  10_openai_agents_sdk.py  11_snapshots.sh  12_custom_evaluator.py  13_llm_judge.py  13_sql_queries.sh  14_fork_and_score.py
plans/: phase-1-http-transport-adapters.md  phase-2-cached-llm-call-decorator.md  phase-3-runner-registry-and-dashboard-replay.md  step-edit-on-fork-review.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  rewind-hook.sh
plugin/skills/observe/: SKILL.md
python/: README.md  pyproject.toml  rewind_cli.py
python-mcp/: README.md  pyproject.toml  rewind_mcp_cli.py
python/rewind_agent/: __init__.py  _cli.py  assertions.py  cached_call.py  circuit_breaker.py  evaluation.py  explicit.py  hooks.py  langfuse_import.py  llm_judge.py  openai_agents.py  otel_export.py  otel_import.py  patch.py  pydantic_ai.py  recorder.py  runner.py  store.py
python/rewind_agent/intercept/: __init__.py  _core.py  _flow.py  _install.py  _predicates.py  _request.py  _savings.py  _tokens.py  aiohttp_middleware.py  httpx_transport.py  requests_adapter.py
python/tests/: test_assertions.py  test_cached_call.py  test_circuit_breaker.py  test_evaluation.py  test_explicit.py  test_intercept_aiohttp.py  test_intercept_core.py  test_intercept_httpx.py  test_intercept_install.py  test_intercept_predicates.py  test_intercept_requests.py  test_intercept_santa_fixes.py  test_intercept_savings.py  test_intercept_tokens.py  test_langfuse_import.py  test_llm_judge.py  test_otel_export.py  test_proxy_fallthrough.py  test_recorder.py  test_runner.py  test_store.py
python/tests/e2e/: test_runner_replay_flow.py
scripts/: pre-push-check.sh  publish-mcp-pypi.sh  publish-pypi.sh  repair-fork-step-numbering.py  verify-proxy-mode.sh
site/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
site/public/: robots.txt
site/src/: content.config.ts
site/src/components/: ClaudeCode.astro  Comparison.astro  Compatibility.astro  DemoVideo.astro  EvalPlatform.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  InstallCTA.astro  LocalFirst.astro  MultiAgent.astro  Nav.astro
site/src/content/blog/: hello-world.mdx  jensen-way.mdx  langfuse-debugging.mdx  rewind-fix.mdx
site/src/layouts/: Base.astro  BlogPost.astro
site/src/pages/: index.astro  rss.xml.ts
site/src/pages/blog/: [...slug].astro  index.astro
tests/e2e/: test_16_proxy_resilience.py
use-cases/ray-agent/: ARCHITECTURE.md  TODO.md
use-cases/ray-agent/code/: rewind_hook.py
use-cases/ray-agent/k8s/: Dockerfile.rewind-server  rewind-deployment.yaml
web/: index.html
web/src/: App.tsx
web/src/components/: ActivityTimeline.test.tsx  ActivityTimeline.tsx  DatasetBrowser.tsx  DeleteTimelineConfirmModal.test.tsx  DeleteTimelineConfirmModal.tsx  DiffView.test.tsx  DiffView.tsx  EvalDashboard.tsx  ExperimentComparison.tsx  ExperimentDetail.tsx  ExperimentList.tsx  ExportOtelModal.tsx  ForkModal.test.tsx  ForkModal.tsx  ForkReplayModal.test.tsx  ForkReplayModal.tsx  ReplaySetupModal.test.tsx  ReplaySetupModal.tsx  RunReplayButton.tsx  ScoreBadge.tsx  SessionView.tsx  Sidebar.tsx  SpanNode.tsx  SpanTree.tsx  StepDetailPanel.test.tsx  StepDetailPanel.tsx  StepTimeline.tsx  ThreadList.tsx  ThreadView.tsx  TimelineSelector.test.tsx  TimelineSelector.tsx
web/src/hooks/: use-fork-mutation.ts  use-step-edit.ts  use-store.ts  use-websocket.ts
web/src/lib/: api.test.ts  api.ts  auth.ts
web/src/types/: api.ts
