[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewind-agent"
version = "0.8.1"
description = "Chrome DevTools for AI agents — record, inspect, fork, replay, diff."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Rewind Contributors"},
]
keywords = [
    "ai",
    "agents",
    "debugging",
    "observability",
    "time-travel",
    "llm",
    "openai",
    "anthropic",
    "langgraph",
    "crewai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
rewind = "rewind_cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
agents = ["openai-agents>=0.0.7"]
pydantic = ["pydantic-ai>=1.0"]
all = ["openai>=1.0", "anthropic>=0.18", "openai-agents>=0.0.7", "pydantic-ai>=1.0"]

[project.urls]
Homepage = "https://github.com/agentoptics/rewind"
Repository = "https://github.com/agentoptics/rewind"
Issues = "https://github.com/agentoptics/rewind/issues"
Changelog = "https://github.com/agentoptics/rewind/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["rewind_agent"]

[tool.hatch.build.targets.wheel.force-include]
"rewind_cli.py" = "rewind_cli.py"
