[package]
name = "rewind-assert"
version.workspace = true
edition.workspace = true

[dependencies]
rewind-store = { path = "../rewind-store" }
rewind-replay = { path = "../rewind-replay" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
