[package]
name = "rewind-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
rewind-store = { path = "../rewind-store" }
rewind-proxy = { path = "../rewind-proxy" }
rewind-replay = { path = "../rewind-replay" }
rewind-tui = { path = "../rewind-tui" }
rewind-assert = { path = "../rewind-assert" }
rewind-eval = { path = "../rewind-eval" }
rewind-web = { path = "../rewind-web" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
flate2 = "1"
tar = "0.4"
walkdir = "2"
