[package]
name = "rewind-eval"
version.workspace = true
edition.workspace = true

[dependencies]
rewind-store = { path = "../rewind-store" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = "3"
