[package]
name = "rewind-store"
version.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# v0.13: redact module moved here from rewind-proxy so the explicit-API
# record path (rewind-web) can apply identical redaction passes for
# cache-validation hashing. See src/hash.rs and src/redact.rs.
regex = "1"
# v0.14 (Phase 3): SensitiveString uses subtle::ConstantTimeEq for
# auth-token comparisons. Pinned to 2.x — the crate is small, stable,
# and the standard choice for constant-time equality in the Rust ecosystem.
subtle = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
