[package]
name = "rewind-web"
version.workspace = true
edition.workspace = true

[dependencies]
rewind-store = { path = "../rewind-store" }
rewind-replay = { path = "../rewind-replay" }
rewind-assert = { path = "../rewind-assert" }
rewind-eval = { path = "../rewind-eval" }
rewind-otel = { path = "../rewind-otel" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
futures-util = "0.3"
dashmap = "6"
uuid = { workspace = true }
sha2 = { workspace = true }
subtle = "2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
reqwest = { workspace = true }
